Photo Upload and Delete in API and UI

--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -1,14 +1,19 @@
 {
-  "AppSettings":{
-    "Token":"super secret key"
+  "AppSettings": {
+    "Token": "super secret key"
   },
-  "Connectionstrings":{
-    "DefaultConnection":"Data Source=DatingApp.db"
+  "Connectionstrings": {
+    "DefaultConnection": "Data Source=DatingApp.db"
   },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CloudinarySettings": {
+    "CloudName": "monidipbose",
+    "ApiKey": "632348339181581",
+    "ApiSecret": "AMCfWBOqaL90m1ZjXfQDzNeTw1Y"
+  }
 }
